docs/7.52/md/abenabap_xml_libs.md
---
title: "Class Libraries for XML"
description: |
  Two libraries delivered as part of AS ABAP permit the editing of XML data based on classes and interfaces: -   iXML Library(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_ixml_lib.htm) The 'integrated' XML Library provides methods for parsing XML data in XML 1.0 format to DOM
version: "7.52"
category: "oop"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_xml_libs.htm"
abapFile: "abenabap_xml_libs.htm"
keywords: ["do", "try", "method", "class", "data", "abenabap", "xml", "libs"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Data Interfaces and Communication Interfaces](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_communication.htm) →  [ABAP and XML](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_xml.htm) → 

Class Libraries for XML

Two libraries delivered as part of AS ABAP permit the editing of XML data based on classes and interfaces:

-   [iXML Library](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_ixml_lib.htm)

The "integrated" XML Library provides methods for parsing XML data in XML 1.0 format to [DOM](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendom_glosry.htm "Glossary Entry") representation, for editing a DOM representation, and for rendering a DOM representation in XML data. iXML Library supports DTDs (Document Type Definitions).

-   [sXML Library](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_sxml_lib.htm)

The "serial" XML Library provides methods for iterative processing of XML data in various formats. An XML reader reads XML data, node by node. An XML writer writes individual nodes in XML data. sXML Library supports [JSON](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenjson_glosry.htm "Glossary Entry").

Objects in both libraries can be used as the source or target of the statement [CALL TRANSFORMATION](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcall_transformation.htm).

This translation does not reflect the current version of the documentation.
Continue
[iXML Library](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_ixml_lib.htm)
[sXML Library](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_sxml_lib.htm)