docs/7.57/md/abenabap_xml_libs.md
---
title: "XML - Class Libraries"
description: |
  The following libraries that are delivered as part of AS ABAP enable processing of XML data based on classes and interfaces: -   iXML Library(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_ixml_lib.htm) The 'integrated' XML Library provides methods for parsing XML data in XML
version: "7.57"
category: "oop"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_xml_libs.htm"
abapFile: "abenabap_xml_libs.htm"
keywords: ["do", "if", "try", "method", "class", "data", "abenabap", "xml", "libs"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Data Interfaces and Communication Interfaces](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_communication.htm) →  [ABAP and XML](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_xml.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: XML - Class Libraries, ABENABAP_XML_LIBS, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%
0ASuggestion for improvement:)

XML - Class Libraries

The following libraries that are delivered as part of AS ABAP enable processing of XML data based on classes and interfaces:

-   [iXML Library](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_ixml_lib.htm)
    
    The "integrated" XML Library provides methods for parsing XML data in XML 1.0 format to a [DOM](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendom_glosry.htm "Glossary Entry") representation, for processing a DOM representation, and for rendering a DOM representation in XML data. iXML Library supports DTDs (Document Type Definitions).
    
-   [sXML Library](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_sxml_lib.htm)
    
    The "serial" XML Library provides methods for iterative processing of XML data in various formats. An XML reader reads XML data node by node. An XML writer writes individual nodes in XML data. sXML Library supports [JSON](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenjson_glosry.htm "Glossary Entry").
    

Objects of these libraries can be used as the source or target of the statement [CALL TRANSFORMATION](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapcall_transformation.htm).

Executable Example

[Access to XML using Class Libraries](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenxml_access_abexa.htm)

Continue
[iXML Library](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_ixml_lib.htm)
[sXML Library](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_sxml_lib.htm)
![Example](exa.gif "Example") [Access to XML Using Class Libraries](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenxml_access_abexa.htm)